# ai-cli

./: .gitignore  DEV_LOG.md  LICENSE  README.md  ai-cli-demo.tape  demo-install.ps1  pyproject.toml  record-demo.md  test-clean-install.ps1  test_rich_panel.py
assets/: ai-cli-demo.tape  ai-cli-usage.tape  demo-simple.tape
src/ai_cli/: __init__.py  config.py  llm_client.py  main.py  render.py
src/ai_cli/tools/: __init__.py  find.py  fzf.py  safe_commands.py  tree.py
